[gd_scene load_steps=16 format=3 uid="uid://dvweqacxjay7r"]

[ext_resource type="PackedScene" uid="uid://02k684x8aybd" path="res://src/scenes/map.tscn" id="1_w7ogu"]
[ext_resource type="Script" path="res://src/simulation/Genetics.gd" id="2_s28hq"]
[ext_resource type="Script" path="res://src/simulation/Zookeeper.gd" id="3_6e6li"]
[ext_resource type="Script" path="res://src/ui/simtime_ui.gd" id="4_vy1np"]
[ext_resource type="Script" path="res://src/ui/gencontrol_ui.gd" id="5_in2cl"]
[ext_resource type="Script" path="res://src/ui/foodcontrol_ui.gd" id="6_uxs3m"]
[ext_resource type="Script" path="res://src/ui/creaturepanel_ui.gd" id="7_e3w55"]
[ext_resource type="StyleBox" uid="uid://m3372f0wk2mk" path="res://assets/ui/SepLineUIAsset.tres" id="8_3ihby"]
[ext_resource type="StyleBox" uid="uid://brqbxhceg7eji" path="res://assets/ui/VSepLineUIAsset.tres" id="9_5tlr3"]
[ext_resource type="Script" path="res://src/ui/Camera.gd" id="10_epbi7"]
[ext_resource type="Script" path="res://src/simulation/Resources.gd" id="11_ptsgc"]
[ext_resource type="Script" path="res://src/simulation/Utility.gd" id="12_o42hk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8urog"]
bg_color = Color(0.509804, 0.509804, 0.509804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2prp0"]
bg_color = Color(0.929412, 0.929412, 0.929412, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ulauv"]
bg_color = Color(0.286275, 0.286275, 0.286275, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainScene" type="Node2D"]

[node name="World" parent="." instance=ExtResource("1_w7ogu")]

[node name="Genetics" type="Node" parent="."]
script = ExtResource("2_s28hq")

[node name="Zookeeper" type="Node" parent="."]
script = ExtResource("3_6e6li")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIOverlay" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopUIPanel" type="Panel" parent="CanvasLayer/UIOverlay"]
modulate = Color(0.662745, 0.662745, 0.662745, 1)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8urog")

[node name="SimRunTimeLabel" type="Label" parent="CanvasLayer/UIOverlay/TopUIPanel"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 256.0
offset_top = 14.0
offset_right = 425.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 12
text = "Simulation Run Time:"
script = ExtResource("4_vy1np")

[node name="MsRunTimeLabel" type="Label" parent="CanvasLayer/UIOverlay/TopUIPanel/SimRunTimeLabel"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 168.0
offset_right = 192.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 12
text = "000"
horizontal_alignment = 2

[node name="MinRunTimeLabel" type="Label" parent="CanvasLayer/UIOverlay/TopUIPanel/SimRunTimeLabel"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 128.0
offset_right = 152.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 12
text = "00:"
horizontal_alignment = 2

[node name="SecRunTimeLabel" type="Label" parent="CanvasLayer/UIOverlay/TopUIPanel/SimRunTimeLabel"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 146.0
offset_right = 170.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 12
text = "00."
horizontal_alignment = 2

[node name="SimSpeedLabel" type="Label" parent="CanvasLayer/UIOverlay/TopUIPanel"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 532.0
offset_top = 14.0
offset_right = 701.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 12
text = "Simulation Speed:"

[node name="CurrentGenLabel" type="Label" parent="CanvasLayer/UIOverlay/TopUIPanel"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 8.0
offset_top = 14.0
offset_right = 168.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 12
text = "Current Generation:"
script = ExtResource("5_in2cl")

[node name="GenNumLabel" type="Label" parent="CanvasLayer/UIOverlay/TopUIPanel/CurrentGenLabel"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 128.0
offset_right = 288.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 12
text = "1"

[node name="SideUIPanel" type="Panel" parent="CanvasLayer/UIOverlay"]
modulate = Color(0.662745, 0.662745, 0.662745, 1)
layout_mode = 0
offset_left = 960.0
offset_top = 40.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8urog")

[node name="EControlLabel" type="Label" parent="CanvasLayer/UIOverlay/SideUIPanel"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 14.0
offset_right = 176.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 12
text = "Environment Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FoodPanel" type="Panel" parent="CanvasLayer/UIOverlay/SideUIPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 48.0
offset_right = 176.0
offset_bottom = 88.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2prp0")

[node name="FoodControl" type="Control" parent="CanvasLayer/UIOverlay/SideUIPanel/FoodPanel"]
anchors_preset = 0
offset_right = 160.0
offset_bottom = 40.0
script = ExtResource("6_uxs3m")

[node name="FoodPercentLabel" type="Label" parent="CanvasLayer/UIOverlay/SideUIPanel/FoodPanel/FoodControl"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 88.0
offset_top = 8.0
offset_right = 154.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "50%"
horizontal_alignment = 1

[node name="FoodHSlider" type="HSlider" parent="CanvasLayer/UIOverlay/SideUIPanel/FoodPanel/FoodControl"]
layout_mode = 0
offset_left = 16.0
offset_top = 20.0
offset_right = 144.0
offset_bottom = 36.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="FoodLabel" type="Label" parent="CanvasLayer/UIOverlay/SideUIPanel/FoodPanel/FoodControl"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Food Availability:"

[node name="CreaturePanel" type="Panel" parent="CanvasLayer/UIOverlay/SideUIPanel/FoodPanel"]
layout_mode = 0
offset_top = 352.0
offset_right = 160.0
offset_bottom = 552.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ulauv")
script = ExtResource("7_e3w55")

[node name="CreatureInfoLabel" type="Label" parent="CanvasLayer/UIOverlay/SideUIPanel/FoodPanel/CreaturePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 152.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
autowrap_mode = 3

[node name="SelectedCreatureLabel" type="Label" parent="CanvasLayer/UIOverlay"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 972.0
offset_top = 408.0
offset_right = 1141.0
offset_bottom = 448.0
theme_override_colors/font_color = Color(0, 0, 0, 0.47451)
theme_override_font_sizes/font_size = 12
text = "Selected Creature"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/UIOverlay"]
layout_mode = 0
offset_left = 960.0
offset_top = 36.0
offset_right = 1152.0
offset_bottom = 44.0
theme_override_styles/separator = ExtResource("8_3ihby")

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/UIOverlay"]
layout_mode = 0
offset_left = 952.0
offset_top = 40.0
offset_right = 970.0
offset_bottom = 649.0
theme_override_styles/separator = ExtResource("9_5tlr3")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(4000, 4000)
zoom = Vector2(4, 4)
position_smoothing_enabled = true
position_smoothing_speed = 12.0
script = ExtResource("10_epbi7")

[node name="Creatures" type="Node" parent="."]

[node name="Resources" type="Node" parent="."]
script = ExtResource("11_ptsgc")

[node name="Utility" type="Node" parent="."]
script = ExtResource("12_o42hk")

[connection signal="creature_info" from="Genetics" to="CanvasLayer/UIOverlay/SideUIPanel/FoodPanel/CreaturePanel" method="_on_creature_generator_creature_info"]
[connection signal="next_generation" from="Genetics" to="CanvasLayer/UIOverlay/TopUIPanel/CurrentGenLabel" method="_on_creature_generator_next_generation"]
[connection signal="value_changed" from="CanvasLayer/UIOverlay/SideUIPanel/FoodPanel/FoodControl/FoodHSlider" to="CanvasLayer/UIOverlay/SideUIPanel/FoodPanel/FoodControl" method="_on_food_h_slider_value_changed"]
